# teorpar

./: .gitmodules
OpenMP_test/: CMakeLists.txt  main.c
Дополнительно/: 1_floatAscDescPrecision.c
Задание 2.1/: CMakeLists.txt  main.c  Документ1.docx
Задание 2.2/: CMakeLists.txt  main.c  Документ1.docx
Задание 2.3/: CMakeLists.txt  main.cpp  main_old.cpp  main_oldold.cpp
Задание 3.1/: CMakeLists.txt  main.cpp  output10.txt  output8.txt  Документ1.docx
Задание 4/: Python Thread Old.py  Python Thread.py
Задание 5/: Python Thread Process.py
Задание 6/: Makefile  cpu_host.cpp  cpu_multicore.cpp  output_example.txt  requirements.txt
